feat: add new div item Satorini

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
             <div class="destination" id="mykonos">
                 <h2>Mykonos Island</h2>
+
+            <div class="destination" id="Santorini">
+                <h2>Santorini Island</h2>
             </div>
         </div>
     </div>
