--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
             <div class="destination" id="mykonos">
                 <h2>Mykonos Island</h2>
-
+            </div>
+            
             <div class="destination" id="Santorini">
                 <h2>Santorini Island</h2>
             </div>
