--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
             <div class="destination" id="mykonos">
                 <h2>Mykonos Island</h2>
             </div>
-            
+
             <div class="destination" id="Santorini">
                 <h2>Santorini Island</h2>
             </div>
+
+            <div class="destination" id="hk">
+                <h2>Hong Kong</h2>
+            </div>
+
         </div>
     </div>
 
