feat: add new sub item Kowloon

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
             <div class="destination" id="hk">
                 <h2>Hong Kong</h2>
+                  <h4>Kowloon</h4>
             </div>
 
         </div>
