feat: add item Hong Kong and sub item Kowloon

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2>Mykonos Island</h2>
             </div>
 
-            <div class="destination" id="Santorini">
+            <div class="destination" id="santorini">
                 <h2>Santorini Island</h2>
             </div>
 
