--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <div class="destination" id="hk">
                 <h2>Hong Kong</h2>
                   <h4>Kowloon</h4>
+                  <h4>Hong Kong Island</h4>
+                  <h4>The New Territories</h4>
             </div>
 
         </div>
