fix: take out h4 items

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 
             <div class="destination" id="hk">
                 <h2>Hong Kong</h2>
-                  <h4>Kowloon</h4>
-                  <h4>Hong Kong Island</h4>
-                  <h4>The New Territories</h4>
+                  <h4>Kowloon, HK Island, New Territories</h4>
             </div>
 
         </div>
