--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
                 <h2>Barcelona</h2>
             </div>
 
-            <div class="destination" id="mykonos">
+            <div class="destination" id="greece">
                 <h2>Mykonos Island</h2>
             </div>
 
-            <div class="destination" id="santorini">
+            <div class="destination" id="greece">
                 <h2>Santorini Island</h2>
             </div>
 
             <div class="destination" id="hk">
                 <h2>Hong Kong</h2>
                   <h4>Kowloon, HK Island, New Territories</h4>
+            </div>
+
+            <div class="destination" id="greece">
+                <h2>Athens</h2>
             </div>
 
         </div>
