--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 <h2>Athens</h2>
             </div>
 
+            <div class="destination" id="greece">
+                <h2>Thessaloniki</h2>
+            </div>
+
         </div>
     </div>
 
